@@ -53,6 +53,8 @@ SQL Scripts Plugin: Create Data (INSERT) file from SQL.
 
 Bug fixes:
 
+Scripts Plugin: When scripting tables for MariaDB Decimal and Numeric columns where scripted without precision and scale.
+
 Test button in Add Alias window didn't work when a new Alias was created.
   Note: The problem didn't occur when an existing Alias was copied.
 
